[project]
name = "record-linkage-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-ag-grid>=32.3.1",
    "dash-bootstrap-components>=2.0.3",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "recordlinkage>=0.16",
]
